# notify-rust

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Cargo.toml  History.md  LICENSE-MIT  README.md  bumpversion.sh  capabilities.md  doc-org.freedesktop.impl.portal.Notification.rst.txt  justfile  milestone5.md  moving forward.md  notify-rust-progress.md  notify-rust-roadmap.md  plan-5.0  run_bundled_example.sh  rustfmt.toml  server_infos.yaml  test  urgency-mapping.md  windows_todo.md
.agents/skills/check-three-platforms/: SKILL.md
.agents/skills/notify-rust-platform-feature-parity/: SKILL.md
.cargo/: config.toml
.github/: pull_request_template.md
.github/workflows/: build-platforms.yml  cargo-bloat.yml  ci.yml  convco.yml  pull-request.yml  release.yml  semver-checks.yml
.zed/: tasks.json
examples/: actions.rs  at_bus.rs  build.rs  close.rs  countdown.rs  custom_int.rs  desktop-portal.rs  formatting.rs  get_capabilities.rs  get_information.rs  hints.rs  hints_server.rs  image_path.rs  images.rs  info.rs  info_at_bus.rs  interruption_level.rs  invocation.rs  listen.rs  mac.rs  mac_actions.rs  mac_app_id.rs  mac_usernotifications.rs  mac_usernotifications_async.rs  minimal.rs  on_close.rs  on_close_async.rs  on_close_early.rs  on_close_reason.rs  persistent.rs  progress.rs  properties.rs  response.rs  reuse.rs  schedule.rs  server.rs  server_async.rs  show_volume.rs  signal_listener.rs  simple.rs  (+12 more)
examples/common/: mod.rs
notify-cli/: .travis.yml  Cargo.toml  README.md
notify-cli/src/: main.rs
ruby/: test.rb
src/: action.rs  error.rs  hints.rs  image.rs  interruption_level.rs  lib.rs  listener.rs  macos.rs  main.rs  miniver.rs  noops.rs  notification.rs  notification_id.rs  priority.rs  response.rs  server.rs  timeout.rs  urgency.rs  util.rs  windows.rs  xdg.rs
src/hints/: constants.rs  image.rs  message.rs  tests.rs  urgency.rs
src/macos/: mod.rs  nsusernotification.rs  nsusernotifications.rs  unusernotifications.rs  usernotifications.rs
src/xdg/: bus.rs  dbus_rs.rs  id.rs  mod.rs  server.rs  server_dbus.rs  server_zbus.rs  zbus_rs.rs
src/xdg/dbus_rs/: bus.rs  handle.rs
src/xdg/server_zbus/: mod.rs
src/xdg/zbus_rs/: bus.rs  handle.rs  portal.rs
tests/: actions.rs  conversion.rs  formatting.rs  hints.rs  lib.rs  ownworld.rs  realworld.rs  server.rs  urgency.rs
